# ts-dc-bot

./: .env.example  Dockerfile  Dockerfile.prod  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  railway.json  readme.md  tsconfig.json  tsup.config.ts
.claire/worktrees/agent-ab5e2176/api/src/routes/: mod.rs
api/: Cargo.toml  Dockerfile
api/src/: auth.rs  main.rs  models.rs
api/src/routes/: guilds.rs  stats.rs  users.rs
src/: config.ts  deploy-commands.ts  main.ts
src/api/: auth.ts  router.ts
src/api/routes/: guilds.ts  stats.ts  users.ts
src/commands/: index.ts
src/commands/admin/: mute.ts  purge.ts  unmute.ts
src/commands/casino/: blackjack.ts
src/commands/fia/: report.ts
src/commands/general/: leaderboard.ts  level.ts  multiquote.ts  quote.ts
src/commands/music/: play.ts  skip.ts  stop.ts
src/commands/test/: openModal.ts  report.ts
src/commands/weather/: forecast.ts  weather.ts
src/database/: connection.ts  index.ts
src/database/models/: Guild.ts  User.ts  UserGuild.ts
src/functions/: protestHandler.ts
src/helpers/: buildModalTextInputs.ts
src/utils/: initDatabase.ts  onMessage.ts
web/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.ts  vite.config.ts
web/src/: App.tsx
web/src/components/: Layout.tsx  LeaderboardTable.tsx  Pagination.tsx  StatCard.tsx
web/src/lib/: api.ts
web/src/pages/: Dashboard.tsx  GuildDetail.tsx  Guilds.tsx  Login.tsx  UserDetail.tsx  Users.tsx
