[package]
name = "ts-dc-bot-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono"] }
jsonwebtoken = "9"
tower-http = { version = "0.5", features = ["cors"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
tower = "0.4"
